--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -78,12 +78,8 @@
     "filename = \"../data/external/Ames_data.csv\"\n",
     "ames = pd.read_csv(filename)\n",
     "X = ames.drop(columns=[\"PID\",\"Sale_Price\"])\n",
-    "PID = ames[\"PID\"]\n",
-    "X = sm.add_constant(X, prepend=True)\n",
-    "d = {\"Sale_Price\": ames[\"Sale_Price\"]}\n",
     "y = ames[\"Sale_Price\"].to_numpy()\n",
-    "ames_df = ames.drop(columns=\"PID\")\n",
-    "print(X.shape)"
+    "ames_df = ames.drop(columns=\"PID\")"
    ],
    "cell_type": "code",
    "metadata": {},
